--- a/test/user-profile-card.visual-diff.html
+++ b/test/user-profile-card.visual-diff.html
@@ -60,12 +60,10 @@
 	<div class="visual-diff">
 		<div class="test-case top middle-horizontal">
 			<d2l-labs-user-profile-card id="default"
-				online show-status
-				display-name="Person's Name"
-				image="./img/maya.jpg"
+				show-status
 				tagline="This is a tagline!"
 				user-attributes=["Attribute1","Attribute2"]
-				href="./data/user.json"
+				href="./data/user-enrolled.json"
 				token="token"
 				website="www.website.com">
 				<div slot="social-media-icons">
@@ -78,12 +76,10 @@
 
 		<div class="test-case top middle-horizontal">
 			<d2l-labs-user-profile-card id="long-info"
-				online show-status
-				display-name="Person's Name"
-				image="./img/maya.jpg"
+				show-status
 				tagline="This is my tagline, yo! It could potentially be long enough to cause wrapping. I don't think we impose any limits on the length of this field."
 				user-attributes=["Attribute1","Attribute2"]
-				href="./data/user.json"
+				href="./data/user-enrolled.json"
 				token="token"
 				website="www.website-with-a-very-incredibly-crazy-extra-long-name.com">
 				<div slot="social-media-icons">
@@ -97,11 +93,9 @@
 		<div class="test-case top middle-horizontal">
 			<d2l-labs-user-profile-card id="with-actions"
 				show-email show-im show-progress
-				display-name="Person's Name"
-				image="./img/maya.jpg"
 				tagline="This is a tagline!"
 				user-attributes=["Attribute1","Attribute2"]
-				href="./data/user.json"
+				href="./data/user-enrolled.json"
 				token="token"
 				website="www.website.com">
 				<div slot="social-media-icons">
@@ -115,11 +109,9 @@
 		<div class="test-case top middle-horizontal">
 			<d2l-labs-user-profile-card id="with-awards"
 				show-email show-im show-progress
-				display-name="Person's Name"
-				image="./img/maya.jpg"
 				tagline="This is a tagline!"
 				user-attributes=["Attribute1","Attribute2"]
-				href="./data/user.json"
+				href="./data/user-enrolled.json"
 				token="token"
 				website="www.website.com">
 				<div slot="social-media-icons">
@@ -136,80 +128,64 @@
 
 		<div class="test-case top left">
 			<d2l-labs-user-profile-card id="position-top-left" small-opener
-				display-name="Person's Name"
-				image="./img/maya.jpg"
 				tagline="This is a tagline!"
-				href="./data/user.json"
+				href="./data/user-enrolled.json"
 				token="token">
 			</d2l-labs-user-profile-card>
 		</div>
 
 		<div class="test-case top middle-horizontal">
 			<d2l-labs-user-profile-card id="position-top-middle"
-				display-name="Person's Name"
-				image="./img/maya.jpg"
 				tagline="This is a tagline!"
-				href="./data/user.json"
+				href="./data/user-enrolled.json"
 				token="token">
 			</d2l-labs-user-profile-card>
 		</div>
 
 		<div class="test-case top right">
 			<d2l-labs-user-profile-card id="position-top-right" large-opener
-				display-name="Person's Name"
-				image="./img/maya.jpg"
 				tagline="This is a tagline!"
-				href="./data/user.json"
+				href="./data/user-enrolled.json"
 				token="token">
 			</d2l-labs-user-profile-card>
 		</div>
 
 		<div class="test-case bottom left">
 			<d2l-labs-user-profile-card id="position-bottom-left" small-opener
-				display-name="Person's Name"
-				image="./img/maya.jpg"
 				tagline="This is a tagline!"
-				href="./data/user.json"
+				href="./data/user-enrolled.json"
 				token="token">
 			</d2l-labs-user-profile-card>
 		</div>
 
 		<div class="test-case bottom middle-horizontal">
 			<d2l-labs-user-profile-card id="position-bottom-middle"
-				display-name="Person's Name"
-				image="./img/maya.jpg"
 				tagline="This is a tagline!"
-				href="./data/user.json"
+				href="./data/user-enrolled.json"
 				token="token">
 			</d2l-labs-user-profile-card>
 		</div>
 
 		<div class="test-case bottom right">
 			<d2l-labs-user-profile-card id="position-bottom-right" large-opener
-				display-name="Person's Name"
-				image="./img/maya.jpg"
 				tagline="This is a tagline!"
-				href="./data/user.json"
+				href="./data/user-enrolled.json"
 				token="token">
 			</d2l-labs-user-profile-card>
 		</div>
 
 		<div class="test-case middle-vertical offset-left">
 			<d2l-labs-user-profile-card id="position-offset-left"
-				display-name="Person's Name"
-				image="./img/maya.jpg"
 				tagline="This is a tagline!"
-				href="./data/user.json"
+				href="./data/user-enrolled.json"
 				token="token">
 			</d2l-labs-user-profile-card>
 		</div>
 
 		<div class="test-case middle-vertical offset-right">
 			<d2l-labs-user-profile-card id="position-offset-right"
-				display-name="Person's Name"
-				image="./img/maya.jpg"
 				tagline="This is a tagline!"
-				href="./data/user.json"
+				href="./data/user-enrolled.json"
 				token="token">
 			</d2l-labs-user-profile-card>
 		</div>
