✨ Added OrgDefinedID and Updated Tests Co-authored-by: Viktor Yakovlyev <vix633@users.noreply.github.com>

--- a/demo/user-profile-card.html
+++ b/demo/user-profile-card.html
@@ -45,7 +45,8 @@
 				<d2l-labs-user-profile-card  show-email show-im show-progress
 					href="./data/user-enrolled.json"
 					token="token"
-					tagline="This is my tagline, yo!">
+					tagline="This is my tagline, yo!"
+					user-progress-href="http://google.com">
 				</d2l-labs-user-profile-card>
 			</d2l-demo-snippet>
 
