--- a/test/user-profile-card.visual-diff.html
+++ b/test/user-profile-card.visual-diff.html
@@ -60,10 +60,9 @@
 	<div class="visual-diff">
 		<div class="test-case top middle-horizontal">
 			<d2l-labs-user-profile-card id="default"
-				show-status
 				tagline="This is a tagline!"
 				user-attributes=["Attribute1","Attribute2"]
-				href="./data/user-enrolled.json"
+				href="./data/user-enrolled2.json"
 				token="token"
 				website="www.website.com">
 				<div slot="social-media-icons">
@@ -76,10 +75,9 @@
 
 		<div class="test-case top middle-horizontal">
 			<d2l-labs-user-profile-card id="long-info"
-				show-status
 				tagline="This is my tagline, yo! It could potentially be long enough to cause wrapping. I don't think we impose any limits on the length of this field."
 				user-attributes=["Attribute1","Attribute2"]
-				href="./data/user-enrolled.json"
+				href="./data/user-enrolled2.json"
 				token="token"
 				website="www.website-with-a-very-incredibly-crazy-extra-long-name.com">
 				<div slot="social-media-icons">
@@ -92,12 +90,12 @@
 
 		<div class="test-case top middle-horizontal">
 			<d2l-labs-user-profile-card id="with-actions"
-				show-email show-im show-progress
 				tagline="This is a tagline!"
 				user-attributes=["Attribute1","Attribute2"]
 				href="./data/user-enrolled.json"
 				token="token"
-				website="www.website.com">
+				website="www.website.com"
+				user-progress-href="www.website.com">
 				<div slot="social-media-icons">
 					<d2l-icon icon="tier2:save"></d2l-icon>
 					<d2l-icon icon="tier2:browser"></d2l-icon>
@@ -108,9 +106,25 @@
 
 		<div class="test-case top middle-horizontal">
 			<d2l-labs-user-profile-card id="with-awards"
-				show-email show-im show-progress
 				tagline="This is a tagline!"
-				user-attributes=["Attribute1","Attribute2"]
+				href="./data/user-enrolled.json"
+				token="token"
+				website="www.website.com">
+				<div slot="social-media-icons">
+					<d2l-icon icon="tier2:save"></d2l-icon>
+					<d2l-icon icon="tier2:browser"></d2l-icon>
+					<d2l-icon icon="tier2:send"></d2l-icon>
+				</div>
+				<div slot="awards-icons">
+					<img src="./img/Badge_Grad_Hat.png" width="40px"/>
+					<img src="./img/book-award.png" width="40px"/>
+				</div>
+			</d2l-labs-user-profile-card>
+		</div>
+
+		<div class="test-case top middle-horizontal">
+			<d2l-labs-user-profile-card id="all-settings-off"
+				tagline="This is a tagline!"
 				href="./data/user-enrolled.json"
 				token="token"
 				website="www.website.com">
@@ -129,7 +143,7 @@
 		<div class="test-case top left">
 			<d2l-labs-user-profile-card id="position-top-left" small-opener
 				tagline="This is a tagline!"
-				href="./data/user-enrolled.json"
+				href="./data/user-enrolled2.json"
 				token="token">
 			</d2l-labs-user-profile-card>
 		</div>
@@ -137,7 +151,7 @@
 		<div class="test-case top middle-horizontal">
 			<d2l-labs-user-profile-card id="position-top-middle"
 				tagline="This is a tagline!"
-				href="./data/user-enrolled.json"
+				href="./data/user-enrolled2.json"
 				token="token">
 			</d2l-labs-user-profile-card>
 		</div>
@@ -145,7 +159,7 @@
 		<div class="test-case top right">
 			<d2l-labs-user-profile-card id="position-top-right" large-opener
 				tagline="This is a tagline!"
-				href="./data/user-enrolled.json"
+				href="./data/user-enrolled2.json"
 				token="token">
 			</d2l-labs-user-profile-card>
 		</div>
@@ -153,7 +167,7 @@
 		<div class="test-case bottom left">
 			<d2l-labs-user-profile-card id="position-bottom-left" small-opener
 				tagline="This is a tagline!"
-				href="./data/user-enrolled.json"
+				href="./data/user-enrolled2.json"
 				token="token">
 			</d2l-labs-user-profile-card>
 		</div>
@@ -161,7 +175,7 @@
 		<div class="test-case bottom middle-horizontal">
 			<d2l-labs-user-profile-card id="position-bottom-middle"
 				tagline="This is a tagline!"
-				href="./data/user-enrolled.json"
+				href="./data/user-enrolled2.json"
 				token="token">
 			</d2l-labs-user-profile-card>
 		</div>
@@ -169,7 +183,7 @@
 		<div class="test-case bottom right">
 			<d2l-labs-user-profile-card id="position-bottom-right" large-opener
 				tagline="This is a tagline!"
-				href="./data/user-enrolled.json"
+				href="./data/user-enrolled2.json"
 				token="token">
 			</d2l-labs-user-profile-card>
 		</div>
@@ -177,7 +191,7 @@
 		<div class="test-case middle-vertical offset-left">
 			<d2l-labs-user-profile-card id="position-offset-left"
 				tagline="This is a tagline!"
-				href="./data/user-enrolled.json"
+				href="./data/user-enrolled2.json"
 				token="token">
 			</d2l-labs-user-profile-card>
 		</div>
@@ -185,7 +199,7 @@
 		<div class="test-case middle-vertical offset-right">
 			<d2l-labs-user-profile-card id="position-offset-right"
 				tagline="This is a tagline!"
-				href="./data/user-enrolled.json"
+				href="./data/user-enrolled2.json"
 				token="token">
 			</d2l-labs-user-profile-card>
 		</div>
